# ocp-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/oc-cli/: Cargo.toml
crates/oc-cli/src/: main.rs
crates/oc-core/: Cargo.toml
crates/oc-core/src/: lib.rs  model.rs  parse.rs
crates/oc-runner/: Cargo.toml
crates/oc-runner/resources/: blocked_plugins.json  trusted_keys.json
crates/oc-runner/src/: db.rs  errors.rs  executor.rs  installer.rs  lib.rs  query.rs  trust.rs
crates/oc-runner/src/repository/: mod.rs  plugin_alias.rs  plugin_content_cache.rs  plugin_events.rs  plugin_installation.rs  plugin_registry.rs  snippets.rs
crates/oc-sign/: Cargo.toml
crates/oc-sign/src/: main.rs
crates/ocp-conformance/: Cargo.toml
crates/ocp-conformance/fixtures/capability/: closure_invalid_both_restart_modes.json  closure_invalid_cancel_without_stdin.json  closure_valid.json  reject_namespace_only.json  valid_standard.json
crates/ocp-conformance/fixtures/content_digest/: valid_sha256.json
crates/ocp-conformance/fixtures/duration/: valid_omitted_nanos.json  valid_with_nanos.json
crates/ocp-conformance/fixtures/envelope/: preserves_unknown_payload_field.json  preserves_unknown_top_level_field.json  valid_minimal_event.json  valid_with_payload_and_ext.json
crates/ocp-conformance/fixtures/identifier/: preserves_unknown_format.json  valid_ulid.json
crates/ocp-conformance/fixtures/kind/: reject_class_only.json  reject_unknown_class.json  reject_uppercase_segment.json  valid_event_run_started.json  valid_vendor_kind.json
crates/ocp-conformance/fixtures/manifest/: preserves_unknown_top_level.json  valid_minimal.json
crates/ocp-conformance/fixtures/path_ref/: valid_local.json  valid_run_relative.json
crates/ocp-conformance/src/: lib.rs
crates/ocp-conformance/tests/: run_corpus.rs
crates/ocp-host/: Cargo.toml
crates/ocp-host/src/: lib.rs  project_layout.rs  registry.rs  runner.rs  tool_protocol.rs  trust.rs
crates/ocp-host/tests/: runner_tests.rs
crates/ocp-types-v1/: Cargo.toml
crates/ocp-types-v1/src/: capabilities.rs  common.rs  controls.rs  envelope.rs  events.rs  kind.rs  lib.rs  manifest.rs  responses.rs  wire.rs
crates/openchoice-license/: Cargo.toml
crates/openchoice-license/src/: bypass.rs  bypass_table.rs  derive.rs  fetch.rs  gate.rs  lib.rs  salt.rs  state.rs
docs/: book.toml
docs/src/: SUMMARY.md  compatibility.md  introduction.md
docs/src/appendix/: rust-primer.md
docs/src/formats/: oce-1.md  registry-1.md
docs/src/guide/: commands.md  events.md  manifest.md  packaging.md  quickstart.md  static-assets.md  testing.md
docs/src/protocol/: capabilities-1.md  envelope-1.md  kinds-1.md  ocp-json-1.md  wire-format-1.md
docs/src/trust/: trust-1.md
