[package]
name = "oc-runner"
version = "0.1.0"
edition = "2021"
description = "Shared .oce file execution engine used by Open Choice Tauri app and oc-cli"

[dependencies]
oc-core          = { version = "0.1", path = "../oc-core" }
ocp-host         = { version = "0.1", path = "../ocp-host" }
rusqlite         = { version = "0.31", features = ["bundled"] }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
chrono           = { workspace = true }
dirs             = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
zip              = "2"
ed25519-dalek    = { version = "2", default-features = false, features = ["std", "zeroize", "rand_core"] }
